- dix: Add minio to network

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
+    networks:
+      - app_network
 
   backend:
     build:
